<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlbumAddCommentFragment">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/album_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:id="@+id/album_cover"
                android:contentDescription="@string/album_item_content_descriptor" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/label_add_comment" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/label_comment"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_add_coment"
                    style="@style/labelTextNew" />
                <EditText
                    android:id="@+id/textComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/input_background"
                    android:autofillHints="@string/album_add_comment_fragment_autofillHints_comment"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/album_add_comment_fragment_autofillHints_comment"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                	android:textDirection="locale"
                	android:textAlignment="gravity"
                    android:id="@+id/labelCommentRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_comment_rating"
                    style="@style/labelTextNew" />


                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1"
                    android:rating="0"
                    android:isIndicator="false"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical" />
            </LinearLayout>


            <Button
                android:id="@+id/btnCreate"
                android:layout_width="167dp"
                android:layout_height="45dp"
                android:text="@string/create"
                android:layout_gravity="center_horizontal"
                style="@style/ButtonRounded" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
